# assignments

./: water_bucket.ipynb
Assignment/: Dockerfile
Assignment/app/: main.py
Assignment_02/: assignment_2.md
Assignment_03/: assignment_03.md
Assignment_04(python)/: readme.md
Assignment_04(python)/app/: get_last_element.py  get_list.py  main.py
Assignment_05(Python)/: Dockerfile  README.md  pyproject.toml
Assignment_05(Python)/app/: main.py
Assignment_05(theory)/: 05_assignment_theory.md
Assignment_06(python)/: Dockerfile  README.md  pyproject.toml
Assignment_06(python)/app/: main.py
Assignment_07(python)/app/: main.py
Assignment_08(theory)/: readme.md
assignment_05(theory)/: readme.md
